--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,10 @@
     <!-- ErrorType (Token) -->
     <string name="error_token_not_found">계정 토큰을 찾을 수 없음</string>
 
-
+    <!-- ReportType -->
+    <string name="report_dont_Like">마음에 들지 않음</string>
+    <string name="report_spam_and_advertising">스팸 및 광고성 게시글</string>
+    <string name="report_inappropriate">부적절함</string>
+    <string name="report_fake">사기 또는 거짓</string>
+    <string name="report_hate_speech">혐오 발언</string>
 </resources>
