FLIP-115 [feat] SplashScreen 추가 -- (추가) SplashScreen API 1.0.1 의존성 추가 -- (추가) splash.xml 추가 -- (추가) logo_anim.xml(임시 로고 애니메이션) 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,8 @@
     <string name="report_inappropriate">부적절함</string>
     <string name="report_fake">사기 또는 거짓</string>
     <string name="report_hate_speech">혐오 발언</string>
+    
+    <!-- Activity -->
+    <string name="activity_splash">SplashActivity</string>
+    <string name="title_activity_splash">SplashActivity</string>
 </resources>
