--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,15 @@
     <string name="error_local_unexpected">알 수 없는 오류</string>
     <!-- ErrorType (Token) -->
     <string name="error_token_not_found">계정 토큰을 찾을 수 없음</string>
+    <!-- ErrorType (Auth) -->
+    <string name="error_auth_parsing_exception">ID Token 파싱 예외</string>
+    <string name="error_auth_credential_type_invalid">인증 타입이 올바르지 않습니다.</string>
+    <string name="error_auth_token_error">토큰 에러.</string>
+    <string name="error_auth_cancelled">작업이 취소되었습니다.</string>
+    <string name="error_auth_delete_acocunt_failed">계정 삭제에 실패 했습니다.</string>
+    <string name="error_auth_user_not_found">사용자를 찾을 수 없습니다.</string>
+    <string name="error_auth_unexpected">알 수 없는 오류</string>
+
 
     <!-- ReportType -->
     <string name="report_dont_Like">마음에 들지 않음</string>
