--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -6,4 +6,51 @@
     <string name="fab_item_comment">댓글</string>
     <string name="fab_item_share">공유</string>
     <string name="fab_item_more">더보기</string>
+
+    <!-- ErrorType (Exception) -->
+    <string name="error_exception_io">인터넷 연결을 확인해주세요.</string>
+    <string name="error_exception_timeout">요청 시간 초과</string>
+    <string name="error_exception_json_data">데이터 관련 오류</string>
+    <string name="error_exception_json_encoding">데이터 관련 오류</string>
+    <string name="error_exception_malformed_json">데이터 관련 오류</string>
+    <string name="error_exception_exception">알 수 없는 오류로 인해 앱을 다시 시작해주세요.</string>
+    <!-- ErrorType (Network) -->
+    <string name="error_network_bad_request">잘못된 요청이에요.</string>
+    <string name="error_network_unauthorized">액세스 접근 불가</string>
+    <string name="error_network_forbidden">정지된 사용자거나 액세스 접근 불가</string>
+    <string name="error_network_not_found">찾을 수 없어요 ㅜ.ㅜ</string>
+    <string name="error_network_timeout">요청 시간 초과</string>
+    <string name="error_network_too_many_requests">너무 많은 요청을 보냈어요 잠시만 기다려주세요.</string>
+    <string name="error_network_server_error">서버 오류</string>
+    <string name="error_network_internet_connection">인터넷 연결을 확인해주세요.</string>
+    <string name="error_network_serialization">데이터 관련 오류</string>
+    <string name="error_network_conflict">데이터 충돌 혹은 중복</string>
+    <string name="error_network_unexpected">알 수 없는 오류</string>
+    <!-- ErrorType (Local) -->
+    <string name="error_local_empty">존재하지 않는 데이터</string>
+    <string name="error_local_unexpected">알 수 없는 오류</string>
+    <!-- ErrorType (Token) -->
+    <string name="error_token_not_found">계정 토큰을 찾을 수 없음</string>
+    <!-- ErrorType (Auth) -->
+    <string name="error_auth_parsing_exception">ID Token 파싱 예외</string>
+    <string name="error_auth_credential_type_invalid">인증 타입이 올바르지 않습니다.</string>
+    <string name="error_auth_token_error">토큰 에러.</string>
+    <string name="error_auth_cancelled">작업이 취소되었습니다.</string>
+    <string name="error_auth_delete_acocunt_failed">계정 삭제에 실패 했습니다.</string>
+    <string name="error_auth_user_not_found">사용자를 찾을 수 없습니다.</string>
+    <string name="error_auth_unexpected">알 수 없는 오류</string>
+
+    <!-- ReportType -->
+    <string name="report_dont_Like">마음에 들지 않음</string>
+    <string name="report_spam_and_advertising">스팸 및 광고성 게시글</string>
+    <string name="report_inappropriate">부적절함</string>
+    <string name="report_fake">사기 또는 거짓</string>
+    <string name="report_hate_speech">혐오 발언</string>
+
+    <!-- LoginScreen -->
+    <string name="login_screen_title_1">더욱 쉽게</string>
+    <string name="login_screen_title_2">눈에 담기는</string>
+    <string name="login_screen_title_3">모든 이야기</string>
+    <string name="login_screen_select_platform">SNS 계정으로 간편하게 가입해보세요!</string>
+
 </resources>
