--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,11 @@
     <string name="title_activity_splash">SplashActivity</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_login">LoginActivity</string>
+
+    <!-- BottomNavigation Item -->
+    <string name="bottom_nav_home">홈</string>
+    <string name="bottom_nav_flip">플립</string>
+    <string name="bottom_nav_add_flip">글쓰기</string>
+    <string name="bottom_nav_profile">프로필</string>
+    <!-- BottomNavigation Item(Content Description) -->
 </resources>
