--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -15,17 +15,15 @@
     <string name="error_exception_malformed_json">데이터 관련 오류</string>
     <string name="error_exception_exception">알 수 없는 오류로 인해 앱을 다시 시작해주세요.</string>
     <!-- ErrorType (Network) -->
-    <string name="error_network_bad_request">잘못된 요청이에요.</string>
+    <string name="error_network_bad_request">잘못된 요청 이에요.</string>
     <string name="error_network_unauthorized">액세스 접근 불가</string>
-    <string name="error_network_forbidden">정지된 사용자거나 액세스 접근 불가</string>
-    <string name="error_network_not_found">찾을 수 없어요 ㅜ.ㅜ</string>
-    <string name="error_network_timeout">요청 시간 초과</string>
-    <string name="error_network_too_many_requests">너무 많은 요청을 보냈어요 잠시만 기다려주세요.</string>
-    <string name="error_network_server_error">서버 오류</string>
-    <string name="error_network_internet_connection">인터넷 연결을 확인해주세요.</string>
-    <string name="error_network_serialization">데이터 관련 오류</string>
-    <string name="error_network_conflict">데이터 충돌 혹은 중복</string>
+    <string name="error_network_forbidden">권한이 없어요.</string>
+    <string name="error_network_not_found">찾을 수 없어요.</string>
+    <string name="error_network_timeout">요청 시간을 초과 했어요.</string>
+    <string name="error_network_internal_server">서버 오류</string>
+    <string name="error_network_unexpected_server">알 수 없는 서버 오류</string>
     <string name="error_network_unexpected">알 수 없는 오류</string>
+    <string name="error_network_internet_connection">인터넷 연결을 확인 해 주세요.</string>
     <!-- ErrorType (Local) -->
     <string name="error_local_empty">존재하지 않는 데이터</string>
     <string name="error_local_unexpected">알 수 없는 오류</string>
