--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -65,4 +65,12 @@
     <string name="home_flip_card_content_desc_photo_url">프로필 사진</string>
     <string name="home_flip_card_content_desc_more">더보기</string>
 
+    <!-- EditInterestCategoriesScreen -->
+    <string name="edit_interest_categories_top_bar_title">관심분야 수정</string>
+    <string name="edit_interest_categories_title_1">님은</string>
+    <string name="edit_interest_categories_title_2">의 관심분야가 있어요!</string>
+    <string name="edit_interest_categories_btn_finish">적용하기</string>
+    <string name="edit_interest_categories_speechbubble">관심분야를 자유롭게 추가하고 삭제해보세요.\n꾹 누르면 관심 있는 순서대로 배치할 수도 있어요!</string>
+    <string name="edit_interest_categories_list_title_1">관심사 리스트</string>
+    <string name="edit_interest_categories_list_title_2">전체 선택</string>
 </resources>
