FLIP-136 [feat] 홈화면 구현 + 나의 카테고리 수정 구현 (1차) --(수정) 기존 MainNavigation을 BottomNavigation로 변경 --(추가) 새로운 MainNavigation 생성 --(추가) FlipTransition 추가 및 수정 --(수정) UseCase 에서 데이터 가져오는 로직 수정 --(수정) 리포지토리에서 flow 블록 내부에서 withContext() 전부 제거 (suspend fun 제외) --(추가) DraggableUtils 추가 --(추가) 나의 관심 카테고리 업데이트 기능 추가 (테스트 코드 작성 완료) --(수정) 모든 버튼(공통컴포넌트) 로딩 시 클릭 방지

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,9 @@
     <string name="bottom_nav_flip">플립</string>
     <string name="bottom_nav_add_flip">글쓰기</string>
     <string name="bottom_nav_profile">프로필</string>
+
     <!-- BottomNavigation Item(Content Description) -->
+
+    <!-- PlaceHolder (Text) -->
+    <string name="placeholder_nickname">플리퍼</string>
 </resources>
