FLIP-158 [feat] 플립(Post)작성 화면 구현 2차 1. FlipTextButton, 그냥 텍스트버튼이랑 구분을 두었음 2. AddFlipScreen에서 ModalBottomSheet 패딩 수정 3. TopBar부분 상하 패딩 수정 4. HomeScreen 주석작업 5. CommonPaddingValues 수정 6. AddFlipScreen 페이지 추가 & 삭제 기능 추가

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -119,11 +119,13 @@
     <string name="add_flip_screen_letter_guide_notice_5_2">조금 줄여보는 건 어떨까요? 🔥</string>
     <string name="add_flip_screen_setting_background_color">배경 컬러</string>
     <string name="add_flip_screen_add_tags_bottom_sheet_title">태그 추가</string>
-    <string name="add_flip_screen_add_tags_bottom_sheet_btn">개 등록하기</string>
+    <string name="add_flip_screen_add_tags_bottom_sheet_btn">등록하기</string>
     <string name="add_flip_screen_add_tags_placeholder">태그를 입력해주세요. 최대 10개까지 가능합니다.</string>
     <string name="add_flip_screen_add_tags_title">태그</string>
     <string name="add_flip_screen_add_tags_btn">추가</string>
+    <string name="add_flip_screen_add_tags_save_btn">저장하기</string>
     <string name="add_flip_screen_bottom_btn">완료</string>
+    <string name="add_flip_screen_delete_page_btn">삭제</string>
 
     <!-- AddFlip Screen (Content Description) -->
     <string name="add_flip_screen_content_desc_select_category">분야 선택</string>
