--- a/designsystem/src/main/res/values/strings.xml
+++ b/designsystem/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <!-- TextField -->
     <string name="tf_placeholder_search">키워드, 이름, 태그를 입력해 주세요.</string>
     <string name="tf_placeholder_comment">글에 대한 다양한 생각을 댓글로 공유해보세요.</string>
+
+    <!-- Snackbar -->
+    <string name="snackbar">스낵바 메시지</string>
 </resources>
