--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -38,6 +38,14 @@
     <string name="error_auth_user_not_found">사용자를 찾을 수 없습니다.</string>
     <string name="error_auth_unexpected">알 수 없는 오류</string>
 
+    <!-- ValidationErrorType -->
+    <string name="validation_error_post_title_is_empty">제목이 비어있습니다.</string>
+    <string name="validation_error_post_content_is_empty">내용이 비어있습니다.</string>
+    <string name="validation_error_post_content_too_long">내용이 너무 깁니다.</string>
+    <string name="validation_error_post_tags_10_limit">태그는 최대 10 개 까지만 입력 가능 합니다.</string>
+    <string name="validation_error_post_tags_empty_item">태그에 빈 글자를 입력할 수 없습니다.</string>
+    <string name="validation_error_temp_post_empty_title_and_content">제목, 내용이 전부 비어있습니다.</string>
+
     <!-- ReportType -->
     <string name="report_dont_Like">마음에 들지 않음</string>
     <string name="report_spam_and_advertising">스팸 및 광고성 게시글</string>
