FLIP-158 [feat] 플립(Post)작성 화면 구현 3차 (임시 완료)
1. ~asUiText 파일 uitext 패키지로 이동
2. FlipImeDoneToolbarWrapper 추가
3. CommonPaddingValues-TopBarWithLogo 에서 start 패딩 16dp로 수정
4. 키보드 포커싱 남아있는 버그 수정 (임시 수정 완료)

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -141,4 +141,7 @@
     <string name="add_flip_screen_content_desc_setting_background_color">배경 컬러</string>
     <string name="add_flip_screen_content_desc_show_more">더보기</string>
     <string name="add_flip_screen_content_desc_add_tags">태그 추가</string>
+
+    <!-- Keyboard Toolbar -->
+    <string name="keyboard_toolbar_btn_done">완료</string>
 </resources>
