FLIP-158 [feat] 플립(Post)작성 화면에서 경고모달 구현
1. 제목이나 본문에 한 글자라도 입력 후 이탈 시 경고모달(임시저장) 표시하게끔 구현 (-> 예정)
2. AddFlipUiEvent - OnSafeSave 추가
3. CommonPaddingValues 주석 추가
4. FlipModal 내부 요소 크기 수정, 주석 추가
5. FlipTransition - dialogExit 수정

TODO AddFlipScreen 에서 FlipBackHandler 부분 condition 수정

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -143,6 +143,12 @@
     <string name="add_flip_screen_content_desc_show_more">더보기</string>
     <string name="add_flip_screen_content_desc_add_tags">태그 추가</string>
 
+    <!-- AddFlip Screen (Modal) -->
+    <string name="add_flip_screen_modal_main_title">잠깐! 작성 중인 글을 저장할까요?</string>
+    <string name="add_flip_screen_modal_sub_title">지금 나가면 작성 중인 글이 삭제됩니다.\n저장한 글은 임시저장에서 이어서 작성할 수 있어요.</string>
+    <string name="add_flip_screen_modal_item_1">저장하기</string>
+    <string name="add_flip_screen_modal_item_2">저장 안 함</string>
+
     <!-- Keyboard Toolbar -->
     <string name="keyboard_toolbar_btn_done">완료</string>
 </resources>
