FLIP-202 [feat] 임시 플립(Post)보관함 구현
1. MVI 패턴에 필요한 TempFlipBoxContract 추가
2. 서버 API 'TEMP POST API' 맞게 수정
(테스트 코드 완료)
3. HomeSkeletonScreen :presentation 모듈로 이동 (앞으로 SkeletonScreen은 각 화면에서 담당)
4. UI 구현 완료

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -149,6 +149,19 @@
     <string name="add_flip_screen_modal_item_1">저장하기</string>
     <string name="add_flip_screen_modal_item_2">저장 안 함</string>
 
+    <!-- TempFlipBox Screen -->
+    <string name="temp_flip_box_screen_topbar_title">임시저장</string>
+    <string name="temp_flip_box_screen_topbar_btn">편집</string>
+    <string name="temp_flip_box_screen_btn_delete">삭제</string>
+    <string name="temp_flip_box_screen_card_title_placeholder">제목없음</string>
+    <string name="temp_flip_box_screen_card_sub_1">총</string>
+    <string name="temp_flip_box_screen_card_sub_2">개</string>
+    <string name="temp_flip_box_screen_card_sub_3">선택</string>
+    <string name="temp_flip_box_screen_card_btn_all_select">전체 선택</string>
+    <string name="temp_flip_box_screen_card_btn_all_select_off">전체 선택 해제</string>
+    <!-- TempFlipBox Screen ContentDescription -->
+    <string name="temp_flip_box_screen_content_desc_card_sub_btn">선택</string>
+
     <!-- Keyboard Toolbar -->
     <string name="keyboard_toolbar_btn_done">완료</string>
 </resources>
