FLIP-158 [feat] 플립(Post)작성화면 디자인 및 기능 수정
1. FlipCenterAlignedTopBar 확장 가능하게 설계
2. FlipIconButton 내부 아이콘 크기 수정 가능하게 설계
3. AddFlipScreen 초기 버전에서 제외 할 '태그 관련 부분' -> TagView로 이동 후 디자인 상에서 제외
삭제 예정, 어차피 커밋내역에서 볼 수 있으니
4. LetterCounterGuide 수정
5. PageCounterWithButton 수정
6. FlipModal 최대 옵션 3개까지 설정 가능하게 수정 + 스타일 선택할 수 있게 수정
7. TempFlipBoxScreen도 FlipModal이 수정됨에따라 수정 + 상태관리 관련해서 수정
8. StatusBar, NavigationBar 화이트 색 고정

--- a/designsystem/src/main/res/values/strings.xml
+++ b/designsystem/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="content_desc_search">검색</string>
     <string name="content_desc_comment">댓글 등록</string>
     <string name="content_desc_arrow_back">뒤로가기</string>
+    <string name="content_desc_close">닫기</string>
     <string name="content_desc_check">체크</string>
 
     <!-- Button - Follow -->
