FLIP-158 [feat] 플립(Post)작성화면 디자인 및 기능 수정
1. 로딩화면 추가
2. 자잘한 수정

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -57,7 +57,8 @@
     <string name="report_hate_speech">혐오 발언</string>
 
     <!-- SuccessType -->
-    <string name="success_temppost_delete">삭제했습니다.</string>
+    <string name="success_temppost_save">임시저장을 완료했어요!</string>
+    <string name="success_temppost_delete">임시저장 글을 삭제했어요!</string>
 
     <!-- LoginScreen -->
     <string name="login_screen_title_1">더욱 쉽게</string>
